--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shelby</title>
+    <title>Выставка Домов</title>
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -41,19 +41,20 @@
                 <div class="wrap-start">
                     <p class="main-item">
                         <img src="img/icon-1.svg" alt="img">
-                        Приятное бизнес окружение
+                        Приятное бизнес <br> окружение
                     </p>
                     <p class="main-item">
                         <img src="img/icon-2.svg" alt="img">
-                        Транспортная
+                        Транспортная <br>
                         доступонсть
                     </p>
                     <p class="main-item">
                         <img src="img/icon-3.svg" alt="img">
-                        Центральные комуникации
+                        Центральные <br> комуникации
                     </p>
                 </div>
-                <a href="#" class="btn btn-img">скачать презентацию <img src="img/presentation.png" alt="скачать презентацию"></a>
+                <a href="#" class="btn btn-img">скачать презентацию <img src="img/presentation.png"
+                        alt="скачать презентацию"></a>
             </div>
         </div>
         <div class="main-fixed">
