--- a/index.html
+++ b/index.html
@@ -73,6 +73,46 @@
         <button class="btn-play"><img src="img/text-btn.svg" alt="Посмотреть видео о посёлке"></button>
     </main>
 
+    <section class="bisnes">
+        <div class="container">
+            <h2 class="headline">МОСКВА ЭТО <b>НОВЫЕ ВОЗМОЖНОСТИ</b> ДЛЯ ВАС И <b>ВАШЕГО БИЗНЕСА</b></h2>
+            <p class="textline">Разместившись у нас на площадке, вы получите стабильный приток новх клиентов из
+                Московского региона.</p>
+            <div class="wrap">
+                <div class="bisnes-item">
+                    <div class="bisnes-item__img">
+                        <img src="img/img.jpg" alt="img">
+                        <a href="#" class="btn btn-sm">подробнее</a>
+                    </div>
+                    <p class="bisnes-item__num">2 000 000</p>
+                    <p class="bisnes-item__text">
+                        Посетителей в месяц - постоянных, платёжеспособных, лояльных к нашей компании
+                    </p>
+                </div>
+                <div class="bisnes-item">
+                    <div class="bisnes-item__img">
+                        <img src="img/img.jpg" alt="img">
+                        <a href="#" class="btn btn-sm">подробнее</a>
+                    </div>
+                    <p class="bisnes-item__num">9 325 000</p>
+                    <p class="bisnes-item__text">
+                        Ежедневных просмотров рекламных площадок, расположенных на МКАД
+                    </p>
+                </div>
+                <div class="bisnes-item">
+                    <div class="bisnes-item__img">
+                        <img src="img/img.jpg" alt="img">
+                        <a href="#" class="btn btn-sm">подробнее</a>
+                    </div>
+                    <p class="bisnes-item__num">2 123</p>
+                    <p class="bisnes-item__text">
+                        Предварительные заявки на просмотр строений от "тёплых" клиентов
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <div class="modal" id="modal-form">
         <div class="modal-content">
