--- a/index.html
+++ b/index.html
@@ -73,45 +73,80 @@
         <button class="btn-play"><img src="img/text-btn.svg" alt="Посмотреть видео о посёлке"></button>
     </main>
 
-    <section class="bisnes">
+    <section class="business">
         <div class="container">
             <h2 class="headline">МОСКВА ЭТО <b>НОВЫЕ ВОЗМОЖНОСТИ</b> ДЛЯ ВАС И <b>ВАШЕГО БИЗНЕСА</b></h2>
             <p class="textline">Разместившись у нас на площадке, вы получите стабильный приток новх клиентов из
                 Московского региона.</p>
             <div class="wrap">
-                <div class="bisnes-item">
-                    <div class="bisnes-item__img">
+                <div class="business-item">
+                    <div class="business-item__img">
                         <img src="img/img.jpg" alt="img">
                         <a href="#" class="btn btn-sm">подробнее</a>
                     </div>
-                    <p class="bisnes-item__num">2 000 000</p>
-                    <p class="bisnes-item__text">
+                    <p class="business-item__num">2 000 000</p>
+                    <p class="business-item__text">
                         Посетителей в месяц - постоянных, платёжеспособных, лояльных к нашей компании
                     </p>
                 </div>
-                <div class="bisnes-item">
-                    <div class="bisnes-item__img">
+                <div class="business-item">
+                    <div class="business-item__img">
                         <img src="img/img.jpg" alt="img">
                         <a href="#" class="btn btn-sm">подробнее</a>
                     </div>
-                    <p class="bisnes-item__num">9 325 000</p>
-                    <p class="bisnes-item__text">
+                    <p class="business-item__num">9 325 000</p>
+                    <p class="business-item__text">
                         Ежедневных просмотров рекламных площадок, расположенных на МКАД
                     </p>
                 </div>
-                <div class="bisnes-item">
-                    <div class="bisnes-item__img">
+                <div class="business-item">
+                    <div class="business-item__img">
                         <img src="img/img.jpg" alt="img">
                         <a href="#" class="btn btn-sm">подробнее</a>
                     </div>
-                    <p class="bisnes-item__num">2 123</p>
-                    <p class="bisnes-item__text">
+                    <p class="business-item__num">2 123</p>
+                    <p class="business-item__text">
                         Предварительные заявки на просмотр строений от "тёплых" клиентов
                     </p>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="scheme">
+        <div class="container">
+            <h2 class="heading"><b>СХЕМА</b> КОМПЛЕКСА</h2>
+            <p>
+                1 июня 2022 г. вводится в эксплуатацию
+                1-я очередь территории выставки малоэтажного строительства на "Мытищинской ярмарке"
+            </p>
+            <p>
+                Увидеть масштаб территории выставки
+                — 2 га. Тут есть все для вас и ваших клиентов
+                .</p>
+            <p>Задать все интересующие вопросы администратору и выберете участок для вас и ваших клинтов.</p>
+            <button class="btn">Арендовать участок</button>
+        </div>
+    </section>
+
+    <section class="partners">
+        <div class="container">
+            <h2 class="heading">Партнеры проекта</h2>
+            <div class="wrap">
+                <div class="partners-item"><img src="img/partner-1.jpg" alt="img"></div>
+                <div class="partners-item"><img src="img/partner-2.jpg" alt="img"></div>
+                <div class="partners-item"><img src="img/partner-3.jpg" alt="img"></div>
+                <div class="partners-item"><img src="img/partner-4.jpg" alt="img"></div>
+                <div class="partners-item"><img src="img/partner-5.jpg" alt="img"></div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+
+        </div>
+    </footer>
 
 
     <div class="modal" id="modal-form">
