--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Выставка Домов</title>
 
-    <link rel="stylesheet" href="./css/style.css?ver-1234">
+    <link rel="stylesheet" href="./css/style.css?ver-2345">
 </head>
 
 <body>
@@ -191,7 +191,7 @@
 
     <script src="./js/jquery-3.4.1.min.js" defer></script>
     <script src="./js/jquery.inputmask.min.js" defer></script>
-    <script src="./js/sky.js" defer></script>
+    <script src="./js/sky.js"></script>
     <script src="./js/scripts.js?ver-1234" defer></script>
 
 </body>
