--- a/index.html
+++ b/index.html
@@ -138,6 +138,122 @@
         </div>
     </section>
 
+    <section class="slider">
+        <div class="container">
+            <h2 class="headline">И все это <b>— правда.</b></h2>
+            <div class="slider-wrapper">
+                <div class="slider-slide">
+                    <h4 class="slider__heading">
+                        <b>Электричество, Вода, Интернет,
+                            конолизация</b> все это у нас есть.
+                        Вы сможете хоть бассейн наполнить
+                        или продемонстрировать работы джакузи
+                    </h4>
+                    <div class="wrap-start">
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                    </div>
+                    <img src="img/slide-1.jpg" alt="slide" class="slider__img">
+                </div>
+                <div class="slider-slide">
+                    <h4 class="slider__heading">
+                        <b>Электричество, Вода, Интернет,
+                            конолизация</b> все это у нас есть.
+                        Вы сможете хоть бассейн наполнить
+                        или продемонстрировать работы джакузи
+                    </h4>
+                    <div class="wrap-start">
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                    </div>
+                    <img src="img/slide-2.jpg" alt="slide" class="slider__img">
+                </div>
+                <div class="slider-slide">
+                    <h4 class="slider__heading">
+                        <b>Электричество, Вода, Интернет,
+                            конолизация</b> все это у нас есть.
+                        Вы сможете хоть бассейн наполнить
+                        или продемонстрировать работы джакузи
+                    </h4>
+                    <div class="wrap-start">
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                    </div>
+                    <img src="img/slide-3.jpg" alt="slide" class="slider__img">
+                </div>
+                <div class="slider-slide">
+                    <h4 class="slider__heading">
+                        <b>Электричество, Вода, Интернет,
+                            конолизация</b> все это у нас есть.
+                        Вы сможете хоть бассейн наполнить
+                        или продемонстрировать работы джакузи
+                    </h4>
+                    <div class="wrap-start">
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                        <p class="slider__item">
+                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                            полностью не будете довольны.
+                        </p>
+                    </div>
+                    <img src="img/slide-4.jpg" alt="slide" class="slider__img">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="partners">
         <div class="container">
             <h2 class="heading">Партнеры проекта</h2>
@@ -152,9 +268,9 @@
     </section>
 
     <footer>
-        <!-- <iframe
+        <iframe
             src="https://yandex.ru/map-widget/v1/?um=constructor%3Abb6cd8a176e0029c3b15ad40b6bde89765239f6ea02d66f67a04d5493630609c&amp;source=constructor"
-            width="100%" height="720" frameborder="0"></iframe> -->
+            width="100%" height="720" frameborder="0"></iframe>
         <div class="container wrap">
             <img src="img/logo-2.svg" alt="logo">
             <p>
@@ -191,8 +307,8 @@
 
     <script src="./js/jquery-3.4.1.min.js" defer></script>
     <script src="./js/jquery.inputmask.min.js" defer></script>
-    <script src="./js/sky.js"></script>
-    <script src="./js/scripts.js?ver-1234" defer></script>
+    <!-- <script src="./js/sky.js" defer></script> -->
+    <script src="./js/scripts.js?ver-2345" defer></script>
 
 </body>
 
