--- a/index.html
+++ b/index.html
@@ -139,117 +139,115 @@
     </section>
 
     <section class="slider">
-        <div class="container">
-            <h2 class="headline">И все это <b>— правда.</b></h2>
-            <div class="slider-wrapper">
-                <div class="slider-slide">
-                    <h4 class="slider__heading">
-                        <b>Электричество, Вода, Интернет,
-                            конолизация</b> все это у нас есть.
-                        Вы сможете хоть бассейн наполнить
-                        или продемонстрировать работы джакузи
-                    </h4>
-                    <div class="wrap-start">
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                    </div>
-                    <img src="img/slide-1.jpg" alt="slide" class="slider__img">
+        <h2 class="headline">И все это <b>— правда.</b></h2>
+        <div class="slider-wrapper">
+            <div class="slider-slide">
+                <h4 class="slider__heading">
+                    <b>Электричество, Вода, Интернет,
+                        конолизация</b> все это у нас есть.
+                    Вы сможете хоть бассейн наполнить
+                    или продемонстрировать работы джакузи
+                </h4>
+                <div class="wrap-start">
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
                 </div>
-                <div class="slider-slide">
-                    <h4 class="slider__heading">
-                        <b>Электричество, Вода, Интернет,
-                            конолизация</b> все это у нас есть.
-                        Вы сможете хоть бассейн наполнить
-                        или продемонстрировать работы джакузи
-                    </h4>
-                    <div class="wrap-start">
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                    </div>
-                    <img src="img/slide-2.jpg" alt="slide" class="slider__img">
+                <img src="img/slide-1.jpg" alt="slide" class="slider__img">
+            </div>
+            <div class="slider-slide">
+                <h4 class="slider__heading">
+                    <b>Электричество, Вода, Интернет,
+                        конолизация</b> все это у нас есть.
+                    Вы сможете хоть бассейн наполнить
+                    или продемонстрировать работы джакузи
+                </h4>
+                <div class="wrap-start">
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
                 </div>
-                <div class="slider-slide">
-                    <h4 class="slider__heading">
-                        <b>Электричество, Вода, Интернет,
-                            конолизация</b> все это у нас есть.
-                        Вы сможете хоть бассейн наполнить
-                        или продемонстрировать работы джакузи
-                    </h4>
-                    <div class="wrap-start">
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                    </div>
-                    <img src="img/slide-3.jpg" alt="slide" class="slider__img">
+                <img src="img/slide-2.jpg" alt="slide" class="slider__img">
+            </div>
+            <div class="slider-slide">
+                <h4 class="slider__heading">
+                    <b>Электричество, Вода, Интернет,
+                        конолизация</b> все это у нас есть.
+                    Вы сможете хоть бассейн наполнить
+                    или продемонстрировать работы джакузи
+                </h4>
+                <div class="wrap-start">
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
                 </div>
-                <div class="slider-slide">
-                    <h4 class="slider__heading">
-                        <b>Электричество, Вода, Интернет,
-                            конолизация</b> все это у нас есть.
-                        Вы сможете хоть бассейн наполнить
-                        или продемонстрировать работы джакузи
-                    </h4>
-                    <div class="wrap-start">
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                        <p class="slider__item">
-                            <b>Согласую 3-5 итераций</b> до тех пор, пока вы
-                            полностью не будете довольны.
-                        </p>
-                    </div>
-                    <img src="img/slide-4.jpg" alt="slide" class="slider__img">
+                <img src="img/slide-3.jpg" alt="slide" class="slider__img">
+            </div>
+            <div class="slider-slide">
+                <h4 class="slider__heading">
+                    <b>Электричество, Вода, Интернет,
+                        конолизация</b> все это у нас есть.
+                    Вы сможете хоть бассейн наполнить
+                    или продемонстрировать работы джакузи
+                </h4>
+                <div class="wrap-start">
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
+                    <p class="slider__item">
+                        <b>Согласую 3-5 итераций</b> до тех пор, пока вы
+                        полностью не будете довольны.
+                    </p>
                 </div>
+                <img src="img/slide-4.jpg" alt="slide" class="slider__img">
             </div>
         </div>
     </section>
@@ -307,6 +305,7 @@
 
     <script src="./js/jquery-3.4.1.min.js" defer></script>
     <script src="./js/jquery.inputmask.min.js" defer></script>
+    <script src="./js/slick.min.js" defer></script>
     <!-- <script src="./js/sky.js" defer></script> -->
     <script src="./js/scripts.js?ver-2345" defer></script>
 
