--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Выставка Домов</title>
-    <link rel="stylesheet" href="./css/style.css?ver-2345">
+    <link rel="stylesheet" href="./css/style.css?ver-345">
 
 </head>
 
@@ -178,6 +178,10 @@
     </section>
 
     <section class="scheme">
+        <div class="scheme-compass">
+            <img src="img/compass-inner.svg" class="scheme-compass__inner" alt="compass">
+            <img src="img/compass.svg" alt="compass">
+        </div>
         <div class="container">
             <h2 class="heading"><b>СХЕМА</b> КОМПЛЕКСА</h2>
             <p>
@@ -191,6 +195,82 @@
             <p>Задать все интересующие вопросы администратору и выберете участок для вас и ваших клинтов.</p>
             <img src="img/scheme.jpg" class="scheme__img" alt="scheme">
             <button class="btn">Арендовать участок</button>
+        </div>
+    </section>
+
+    <section class="catalog">
+        <div class="container">
+            <h2 class="heading">
+                Поклучи <b>каталог</b> со всеми ответами
+            </h2>
+            <p class="textline">Просто скачайте файл. Вы узнаете все необходимое для расширения или создание вашего
+                бизнеса!</p>
+            <div class="wrap">
+                <div class="catalog-col">
+                    <div class="catalog-item">
+                        <img src="img/icon-4.svg" alt="icon" class="catalog-img">
+                        <p>
+                            Статистику по трафику
+                            <b>"Мытищинской ярмарки"</b>
+                        </p>
+                    </div>
+                    <div class="catalog-item">
+                        <img src="img/icon-5.svg" alt="icon" class="catalog-img">
+                        <p>
+                            Расположение участков
+                            для <b>аренды</b>
+                        </p>
+                    </div>
+                    <div class="catalog-item">
+                        <img src="img/icon-6.svg" alt="icon" class="catalog-img">
+                        <p>
+                            Подъездные пути и дороги
+                            по <b>территории выставки</b>
+                        </p>
+                    </div>
+                </div>
+                <img src="img/book.png" class="catalog__img" alt="book">
+                <form action="#">
+                    <input type="text" placeholder="Ваше имя:" required>
+                    <input type="tel" placeholder="Ваше телефон:" required>
+                    <button class="btn">отправить такси</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <section class="discuss">
+        <div class="container wrap">
+            <div class="discuss-title">
+                <h2 class="headline">
+                    <b>Давайте обсудим
+                        ваш проект,</b> предложим
+                    идеи и разные варианты
+                    его реализации
+                </h2>
+                <p class="textline">
+                    <b>Согласую 3-5</b> итераций до тех пор, пока вы
+                    полностью не будете довольны.
+                </p>
+                <p class="textline">
+                    <b>Согласую 3-5</b> итераций до тех пор, пока вы
+                    полностью не будете довольны.
+                </p>
+            </div>
+            <form action="#">
+                <h4>
+                    Уже есть готовый <br>
+                    дизайн-проект?
+                </h4>
+                <p>
+                    Пришлите его и получите заключение <br>
+                    технолога о возможности реализации
+                </p>
+                <input type="text" placeholder="Ваше имя:" required>
+                <input type="tel" placeholder="Ваше телефон:" required>
+                <button class="btn">отправить такси</button>
+            </form>
+            <img src="img/builder.png" class="discuss__img" alt="builder">
         </div>
     </section>
 
@@ -361,8 +441,8 @@
     <script src="./js/jquery-3.4.1.min.js" defer></script>
     <script src="./js/jquery.inputmask.min.js" defer></script>
     <script src="./js/slick.min.js" defer></script>
-    <!-- <script src="./js/sky.js" defer></script> -->
-    <script src="./js/scripts.js?ver-2345" defer></script>
+    <script src="./js/sky.js" defer></script>
+    <script src="./js/scripts.js?ver-345" defer></script>
 
 </body>
 
