--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Выставка Домов</title>
-    <link rel="stylesheet" href="./css/style.css?ver-345">
+    <link rel="stylesheet" href="./css/style.css?ver-4567">
 
 </head>
 
@@ -479,8 +479,8 @@
     <script src="./js/jquery-3.4.1.min.js" defer></script>
     <script src="./js/jquery.inputmask.min.js" defer></script>
     <script src="./js/slick.min.js" defer></script>
-    <!-- <script src="./js/sky.js" defer></script> -->
-    <script src="./js/scripts.js?ver-345" defer></script>
+    <script src="./js/sky.js" defer></script>
+    <script src="./js/scripts.js?ver-4567" defer></script>
 
 </body>
 
